<resources>
    <string name="app_name">STREETGLIDE</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="login_button_text">SIGN IN</string>

    <string name="login">SIGN IN</string>
    <string name="welcometitle">Welcome Please Login Here</string>

    <string name="user_email">USER NAME</string>
    <string name="user_password">PASSWORD</string>
    <string name="cont">NEXT</string>
    <string name="back">BACK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
